# haposa

./: .env.example  .gitignore  index.html  pyproject.toml  script.js  style.css
apps/home/: forms.py  mailing.py  urls.py  views.py
apps/home/static/home/scripts/: script.js
apps/home/static/home/styles/: style.css
apps/home/templates/home/: index.html
core/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
